css/style.css
/* comments from wifey
navbar to be the same, remove underline
dropdown change bg color when hovering */

/* GENERIC RULE */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    z-index: 0;
}

html, body {
    scroll-behavior: smooth;
}

body {
    font-family: "Open Sans", sans-serif;
    background: #FAF9F6;
    background-size: 400% 400%;
    animation: gradient 15s ease infinite;
}
    
a, a:visited {
    text-decoration: none;
    color: rgb(0, 0, 0);
}

a {
    transition: font-weight, 0.6s;
}

a:hover {
    text-decoration: none;
    font-weight: 900;
}

li {
    list-style: none;
}

.displayPic {
    width: 250px;
    border-radius: 50%;
    opacity: 0.8;
    transition: opacity 0.5s;
}

.displayPic:hover {
    opacity: 1;
}

/* HEADER */

ul.links {
    margin: 0;
}

header {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 1;
    padding: 10px;
    margin-bottom: 10px;
    width: 100%;
    transition: background-color 0.4s ease-in-out;
}

header.scrolled {
    background-color: #FAF9F6;
    color: #000000;
}

header.scrolled a {
    background-color: #FAF9F6;
    color: rgb(0, 0, 0);
}

.navbar {
    width: 100%;
    height: 60px;
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
    transition: background-color 0.4s ease-in-out;
}

.navbar .logo a {
    font-size: 1.5rem;
    font-weight: bold;
    color: black;
    border: #000000;
    border-width: 1px;
    border-style: solid;
    padding: 6px;
    transition: color 0.4s ease-in-out;
}

.navbar .links {
    display: flex;
    gap: 2rem;
}

.navbar .toggle_btn {
    color: rgb(0, 0, 0);
    font-size: 1.5rem;
    cursor: pointer;
    display: none;
}

.action_btn {
    /* background-color: black; */
    color: #000000;
    padding: 0.5rem 1rem;
    border: none;
    outline: solid;
    outline-color: #000000;
    border-radius: 50px;
    font-size: 0.8rem;
    font-weight: bold;
    cursor: pointer;
    transition: scale 0.2 ease;
}

.action_btn:hover {
    scale: 1.05;
    color: #25D366;
}

.action_btn:active {
    scale: 0.95;
}

/* DROPDOWN MENU */

.dropdown_menu {
    display: none;
    position: absolute;
    right: 2rem;
    top: 60px;
    height: 0;
    width: 300px;
    background: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(15px);
    border-radius: 10px;
    overflow: hidden;
    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.dropdown_menu.open {
    height: 240px;
}

.dropdown_menu.open li a {
    background-color: #00000000;
}

.dropdown_menu li {
    padding: 0.7rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.dropdown_menu .action_btn {
    width: 100%;
    display: flex;
    justify-content: center;
}

    /* APPLYING MEDIA QUERIES */

@media (max-width: 996px) {
    div#about, div#project, div#photos {
        padding: 1.5rem 25px;
        text-align: justify;
    } 
    div.blogEntry {
        padding-top: 2rem;
    }

    div#socialLinks, #socialLinks a:link, #socialLinks a:visited, #socialLinks a:hover {
        margin: 0;
        font-size: xx-small;
    }
}

@media (max-width: 819px) {
    .navbar .links,
    .navbar .action_btn {
        display: none;
    }

    .navbar .toggle_btn {
        display: block;
    }

    .dropdown_menu {
        display: block;
    }

    div#typing-container {
        margin-top: 1rem;
        padding: 25px 25px 75px;
    }
}

@media (max-width: 576px) {
    .dropdown_menu {
        left: 2rem;
        width: unset;
    }
}

#about, #project, #photos {
    padding: 1.5rem 25px;
}

.info {
    color: white;
    margin-top: 3rem;
    padding: 25px 110px 75px;
    text-align: justify;
}

.instruction {
    color:rgb(94, 92, 92);
    font-family: 'Anonymous Pro';
    margin-top: 1rem;
    padding: 25px 110px 75px;
}

#typing-container {
    color:rgb(16, 16, 16);
    font-family: 'Anonymous Pro';
    margin-top: 1rem;
    padding: 25px 110px 75px;
}

#socialLinks {
    padding-top: 30px;
}

#socialLinks, #socialLinks a:link, #socialLinks a:visited, #socialLinks a:hover {
    text-decoration: none;
    text-align: center;
    color: rgb(0, 0, 0);
    font-size: 2rem;
    margin: 25px
}

.imgcontainer {
    scroll-snap-type: x mandatory;
    scroll-padding: 100px;
}

#proj1,#proj2,#proj3,#proj4 {
    width: 100%;
    height: 240px;
    opacity: 0.8;
    font-family: 'Anonymous Pro';
}

#proj1, #proj2, #proj3, #proj4 {
    position: relative; 
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: url('https://live.staticflickr.com/65535/53559853378_f7e6a3260f_h.jpg');
    background-size: cover;
    color: #ffffff;
    
    &::before {
      content: "";
      position: absolute;
      top: 0px;
      right: 0px;
      bottom: 0px;
      left: 0px;
      background-color: rgba(0, 0, 0, 0.616);
    }
}

#proj1 a, #proj2 a, #proj3 a, #proj4 a {
    text-decoration: none;
    color: #ffffff;
}


.imgcontainer h1 {
    position: relative;
    color: #ffffff;  
    text-align: center;
}

#proj2 {
    background-image: url("https://live.staticflickr.com/65535/53560000749_6373d5a6d0_b.jpg");
}

#proj3 {
    background-image: url("https://live.staticflickr.com/65535/53559677881_7f75114b59_b.jpg");
}

#proj4 {
    background-image: url("https://live.staticflickr.com/65535/53558816292_05eca645e2_b.jpg");
}


/* #project img {
    scroll-snap-align: start;
    object-fit: cover;
    height: 250px;
    width: 50%; 
    margin: calc(10%/4);
    opacity: 0.8;
    border-radius: 10px;
} */

#photos img {
    object-fit: cover;
    height: 250px;
    width: 30%; 
    margin: calc(10%/6);
    opacity: 0.8;
    border-radius: 10px;
    transition: opacity 0.5s, border-radius 0.5s;
}

#photos img:hover {
    opacity: 1;
    border-radius: 60px;
    color: white;
    box-shadow: 0 0.5em 0.5em -0.4em #edff92;
}

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    color: #000000;
    font-size: xx-small;
    padding-left: 1rem;
}

